[block-container] Fixes child block toolbar being cut off. #502 (Adding to #503)

--- a/src/block/container/editor.scss
+++ b/src/block/container/editor.scss
@@ -56,7 +56,7 @@
 // Make overflow visible, but also do some tweaks so that the background gradients & videos
 // Still follow the border radius of the Container block.
 .ugb-container > .ugb-inner-block > .ugb-block-content > .ugb-container__wrapper {
-	overflow: visible;
+	overflow: visible !important;
 	> .ugb-video-background {
 		overflow: hidden;
 	}
